<resources>
    <string name="app_name">Fetch Api Application</string>
    <string name="back_button">Back</string>

    <string name="home_title">Mission: Impossible - Dead Reckoning Part One</string>
    <string name="home_vote_average">7.711</string>
    <string name="home_release_date">2023-07-08</string>

    <string name="detail_title">Mission: Impossible - Dead Reckoning Part One</string>
    <string name="detail_original_title">Mission: Impossible - Dead Reckoning Part One</string>
    <string name="detail_runtime">164 Minutes</string>
    <string name="detail_vote_average">7.711</string>
    <string name="detail_release_date_title">Release date</string>
    <string name="detail_release_date">2023-07-08</string>
    <string name="detail_status_title">Status</string>
    <string name="detail_status">Released</string>
    <string name="detail_synopsis_title">Synopsis</string>
    <string name="detail_synopsis">Ethan Hunt and his IMF team embark on their most dangerous mission yet: To track down a terrifying new weapon that threatens all of humanity before it falls into the wrong hands. With control of the future and the world\'s fate at stake and dark forces from Ethan\'s past closing in, a deadly race around the globe begins. Confronted by a mysterious, all-powerful enemy, Ethan must consider that nothing can matter more than his mission—not even the lives of those he cares about most.</string>
    <string name="detail_similar_movie_title">If you like Mission: Impossible - Dead Reckoning Part One</string>

    <string name="coming_soon_feature">Coming soon…</string>
</resources>
