<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="146dp"
    android:layout_marginVertical="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/iv_poster"
        android:layout_width="100dp"
        android:layout_height="146dp"
        app:siRadius="6dp"
        android:src="@drawable/movie_poster"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_toEndOf="@id/iv_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_toEndOf="@id/iv_poster"
        android:layout_below="@id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_release_date"
        android:textSize="12sp"
        android:textColor="@color/text_color_variant"
        android:layout_marginBottom="12dp"/>

    <LinearLayout
        android:id="@+id/ll_rating"
        android:layout_toEndOf="@id/iv_poster"
        android:layout_below="@id/tv_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_item_main_movie_rating"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_vote_average"
            android:textSize="12sp"
            android:textColor="#C4B530"/>
    </LinearLayout>
</RelativeLayout>