<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ff515151">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="270dp">
                <ImageView
                    android:id="@+id/iv_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_backdrop_image"/>

                <ImageView
                    android:id="@+id/iv_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@drawable/rounded_corner_back_button"
                    android:src="@drawable/ic_detail_back"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="41dp"/>

                <ImageView
                    android:id="@+id/iv_favorite_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@drawable/rounded_corner_favorite_button"
                    android:src="@drawable/ic_detail_favorite_border"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="41dp"/>

                <ImageView
                    android:id="@+id/iv_play_trailer_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@drawable/rounded_corner_play_button"
                    android:src="@drawable/ic_detail_play"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="20dp"
                android:background="@color/container_color"
                android:orientation="vertical"
                android:layout_marginBottom="1dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_title"
                    android:textSize="24sp"
                    android:textColor="@color/text_color"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/tv_original_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_original_title"
                    android:textSize="12sp"
                    android:textColor="@color/text_color_variant"
                    android:layout_marginBottom="16dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_detail_runtime"
                        android:layout_marginEnd="4dp"/>

                    <TextView
                        android:id="@+id/tv_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_runtime"
                        android:textSize="12sp"
                        android:textColor="@color/text_color_variant"
                        android:layout_marginEnd="40dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_detail_vote_average"
                        android:layout_marginEnd="4dp"/>

                    <TextView
                        android:id="@+id/tv_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_vote_average"
                        android:textSize="12sp"
                        android:textColor="@color/text_color_variant"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="20dp"
                android:background="@color/container_color"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="80dp">

                    <TextView
                        android:id="@+id/tv_release_date_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_release_date_title"
                        android:textColor="@color/text_color"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_release_date_title"
                        android:text="@string/detail_release_date"
                        android:textColor="@color/text_color_variant"
                        android:textSize="12sp"
                        android:layout_marginTop="9dp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_status_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_status_title"
                        android:textColor="@color/text_color"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_status_title"
                        android:text="@string/detail_status"
                        android:textColor="@color/text_color_variant"
                        android:textSize="12sp"
                        android:layout_marginTop="9dp"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/container_color"
                android:paddingVertical="20dp"
                android:paddingHorizontal="24dp"
                android:layout_marginBottom="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_synopsis_title"
                    android:textSize="16sp"
                    android:textColor="@color/text_color"
                    android:layout_marginBottom="9dp"/>

                <TextView
                    android:id="@+id/tv_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_synopsis"
                    android:textSize="13sp"
                    android:textColor="@color/text_color_variant"
                    android:layout_marginBottom="9dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/container_color"
                android:paddingTop="20dp"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_similar_movie_title"
                    android:textSize="16sp"
                    android:textColor="@color/text_color"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginBottom="20dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_similar_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="11dp"
                    android:orientation="horizontal"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

<!--  Loading screen  -->
    <RelativeLayout
        android:id="@+id/loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/container_color"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/text_color"/>
    </RelativeLayout>
</FrameLayout>