<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="116dp"
    android:layout_height="170dp"
    android:layout_marginHorizontal="13dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/iv_poster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/movie_poster"
        android:scaleType="centerCrop"
        app:siRadius="6dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="bottom"
        android:background="@drawable/rounded_rectangle_list_movie"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginBottom="1dp"/>

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_below="@id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_release_date"
            android:textColor="@color/text_color_variant"
            android:textSize="11sp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_item_main_movie_rating"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_vote_average"
                android:textSize="10sp"
                android:textColor="#C4B530"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>